# bulut-mimarilerinde-test-muhendisligi

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
argocd/: application.yaml
docs/: final-report.md  generate_pdfs.py  presentation_guide.md  slides.md  work-distribution.md
github_ci_backup/workflows/: ci.yml
helm/qrcode-generator/: Chart.yaml  values.yaml
helm/qrcode-generator/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
k8s/: configmap.yaml  deployment.yaml  service.yaml
keda/: scaled-object.yaml
monitoring/: grafana-dashboard.json  prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
perf/: load-test.js  report.md
postman/: collection.json
src/: __init__.py  database.py  main.py  models.py  s3_service.py  tracing.py
src/templates/: index.html
tests/: __init__.py  conftest.py  factories.py
tests/e2e/: test_ui.py
tests/integration/: test_db_s3.py
tests/unit/: test_qr.py  test_s3_service.py
