[tool.poetry]
name = "qrcode-generator-service"
version = "1.0.0"
description = "MTH2526-B25 Cloud Architecture and Testing Engineering Term Project"
authors = ["Sevval Culcu"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
sqlalchemy = "^2.0.28"
psycopg2-binary = ">=2.9.9"
qrcode = { extras = ["pil"], version = "^7.4.2" }
pillow = ">=10.2.0"
boto3 = "^1.34.50"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
prometheus-fastapi-instrumentator = "^7.0.0"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
opentelemetry-instrumentation-fastapi = "^0.44b0"
opentelemetry-instrumentation-sqlalchemy = "^0.44b0"
opentelemetry-instrumentation-botocore = ">=0.44b0"
opentelemetry-exporter-otlp = "^1.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5"
testcontainers = { extras = ["postgresql", "localstack"], version = "^4.3.0" }
factory-boy = "^3.3.0"
faker = "^24.0.0"
playwright = "^1.42.0"
black = "^24.2.0"
ruff = "^0.3.0"
requests = "^2.31.0"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
